Rename to each_other and add Apache-2.0 license

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,5 @@
 [package]
-name = "async"
+name = "each_other"
 version = "0.1.0"
-authors = ["victor"]
-
-[dependencies]
+authors = ["Victor-Nicolae Savu"]
+license = "Apache-2.0"
