--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ description = ""
 repository = ""
 readme = "README.md"
 keywords = ["coroutine", "generator", "iterator"]
-categories = ["asynchronous", "concurrency", ]
+categories = ["asynchronous", "concurrency"]
 
 [badges]
 travis-ci = { repository = "https://travis-ci.org/Victor-Savu/each_other", branch = "master" }
